@@ -1,7 +1,6 @@
 package com.project.kodesalon.service.member;
 
 import com.project.kodesalon.domain.board.Board;
-import com.project.kodesalon.domain.image.Image;
 import com.project.kodesalon.domain.member.Member;
 import com.project.kodesalon.domain.member.vo.Alias;
 import com.project.kodesalon.repository.board.BoardRepository;
@@ -14,6 +13,8 @@ import org.assertj.core.api.BDDSoftAssertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -21,6 +22,7 @@ import org.springframework.dao.DataIntegrityViolationException;
 
 import javax.persistence.EntityNotFoundException;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -30,7 +32,6 @@ import static com.project.kodesalon.exception.ErrorCode.NOT_EXIST_MEMBER_ALIAS;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.assertj.core.api.BDDAssertions.thenThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
@@ -43,6 +44,8 @@ class MemberServiceTest {
 
     private final BDDSoftAssertions softly = new BDDSoftAssertions();
 
+    private final MemberCreateRequest memberCreateRequest =
+            new MemberCreateRequest("alias", "Password123!!", "이름", "email@email.com", "010-1111-2222", LocalDateTime.now());
     @InjectMocks
     private MemberService memberService;
 
@@ -55,17 +58,9 @@ class MemberServiceTest {
     @Mock
     private Member member;
 
-    @Mock
-    private Board board;
-
-    @Mock
-    private Image image;
-
     @Test
     @DisplayName("회원가입이 성공하면 DB에 회원 객체를 저장합니다.")
     void join() {
-        MemberCreateRequest memberCreateRequest
-                = new MemberCreateRequest("alias", "Password123!!", "이름", "email@email.com", "010-1234-5678", LocalDateTime.now());
         given(member.getId()).willReturn(1L);
         given(memberRepository.findMemberByAlias(any(Alias.class))).willReturn(Optional.empty());
         given(memberRepository.save(any(Member.class))).willReturn(member);
@@ -100,30 +95,27 @@ class MemberServiceTest {
                 .hasMessage(ALREADY_EXIST_MEMBER_ALIAS);
     }
 
-    @Test
-    @DisplayName("회원정보 조회 성공 시, 회원 별명, 이름, 이메일, 전화 번호, 회원이 올린 게시물들을 반환합니다.")
-    void exist_id_response_member() {
-        given(memberRepository.findById(anyLong())).willReturn(Optional.of(member));
+    @ParameterizedTest
+    @CsvSource(value = {"1,false", "10,true"})
+    @DisplayName("회원정보 조회 성공 시, 회원 별명, 이름, 이메일, 전화 번호, 회원이 올린 게시물과 마지막 여부를 반환합니다.")
+    void exist_id_response_member(int size, boolean expected) {
         given(member.getAlias()).willReturn("alias");
         given(member.getName()).willReturn("이름");
         given(member.getEmail()).willReturn("email@email.com");
         given(member.getPhone()).willReturn("010-1111-2222");
-        given(boardRepository.selectMyBoards(anyLong(), anyLong(), anyInt()))
-                .willReturn(List.of(board));
-        given(board.getId()).willReturn(1L);
-        given(board.getTitle()).willReturn("게시물 제목");
-        given(board.getContent()).willReturn("게시물 내용");
-        given(board.getImages()).willReturn(List.of(image));
-        given(image.getId()).willReturn(1L);
-        given(image.getUrl()).willReturn("localhost:8080/image.jpg");
+        Board board = new Board("title", "content", member, LocalDateTime.now());
+        List<Board> boards = Arrays.asList(board, board);
+        given(memberRepository.findById(anyLong())).willReturn(Optional.of(member));
+        given(boardRepository.selectMyBoards(anyLong(), anyLong(), anyLong())).willReturn(boards);
 
-        MemberSelectResponse memberSelectResponse = memberService.selectMember(1L, 10L, 1);
+        MemberSelectResponse memberSelectResponse = memberService.selectMember(1L, Long.MAX_VALUE, size);
 
         softly.then(memberSelectResponse.getAlias()).isEqualTo("alias");
         softly.then(memberSelectResponse.getName()).isEqualTo("이름");
         softly.then(memberSelectResponse.getEmail()).isEqualTo("email@email.com");
         softly.then(memberSelectResponse.getPhone()).isEqualTo("010-1111-2222");
-        softly.then(memberSelectResponse.getOwnBoards().getBoards()).isNotEmpty();
+        softly.then(memberSelectResponse.getBoards()).isNotNull();
+        softly.then(memberSelectResponse.getBoards().isLast()).isEqualTo(expected);
         softly.assertAll();
     }
 
@@ -132,7 +124,7 @@ class MemberServiceTest {
     void select_not_exist_id_throws_exception() {
         given(memberRepository.findById(anyLong())).willReturn(Optional.empty());
 
-        thenThrownBy(() -> memberService.selectMember(1L, 1L, 1))
+        thenThrownBy(() -> memberService.selectMember(1L, Long.MAX_VALUE, 10))
                 .isInstanceOf(EntityNotFoundException.class)
                 .hasMessage(NOT_EXIST_MEMBER);
     }
